Refactor processor integration